# api/controllers/drivers.controller.js
@@ -177,25 +177,29 @@ function getDrivers(req, res) {
   }
 }
 
-function getOperadorById(req, res) {
-  console.log("operadores.controller getOperadorById");
-  try {
-    console.log(req.swagger.params.id.value);
-
-    operadorService.getOperadorById(req.swagger.params.id.value)
-      .then(function (response) {
-        console.log("Good response: " + response);
-        utils.writeJson(res, response);
-      })
-      .catch(function (response) {
-        console.log("Bad response: " + response);
-        utils.writeJson(res, response);
-      });
-    console.log("Success");
-  } catch (error) {
-    console.log("Was an error");
-    controllerHelper.handleErrorResponse(MODULE_NAME, getOperadorById.name, error, res);
-  }
+function getDriverById(req, res) {
+    try {
+  
+      console.log(req.swagger.params.id.value);
+      var id = req.swagger.params.id.value;
+     
+      console.log("driver by id...");
+      console.log(dolly);
+  
+     driver.findById(id,
+        { 
+          include: [{ all: true, nested: true }]
+        }
+      ).then(orders => {
+      console.log(orders);
+      res.status(200).send(orders);
+     })
+  
+    } catch (error) {
+      console.log("Was an error");
+      controllerHelper.handleErrorResponse(MODULE_NAME, getDriverById.name, error, res);
+    }
+  
 }
 
 
@@ -264,7 +268,7 @@ module.exports = {
   getOperadoresLogin,
   getDrivers,
   createOperador,
-  getOperadorById,
+  getDriverById,
   updateOperador,
   deleteOperador,
   GS_CT_ERR_GAMESYSTEM_NOT_FOUND,
