# api/controllers/trailers.controller.js
@@ -133,25 +133,29 @@ function getTrailers(req, res) {
   }
 }
 
-function getTruckById(req, res) {
-  console.log("operadores.controller getOperadorById");
-  try {
-    console.log(req.swagger.params.id.value);
-
-    operadorService.getOperadorById(req.swagger.params.id.value)
-      .then(function (response) {
-        console.log("Good response: " + response);
-        utils.writeJson(res, response);
-      })
-      .catch(function (response) {
-        console.log("Bad response: " + response);
-        utils.writeJson(res, response);
-      });
-    console.log("Success");
-  } catch (error) {
-    console.log("Was an error");
-    controllerHelper.handleErrorResponse(MODULE_NAME, getOperadorById.name, error, res);
-  }
+function getTrailerById(req, res) {
+    try {
+  
+      console.log(req.swagger.params.id.value);
+      var id = req.swagger.params.id.value;
+     
+      console.log("trailer by id...");
+      console.log(trailer);
+  
+      trailer.findById(id,
+        { 
+          include: [{ all: true, nested: true }]
+        }
+      ).then(orders => {
+      console.log(orders);
+      res.status(200).send(orders);
+     })
+  
+    } catch (error) {
+      console.log("Was an error");
+      controllerHelper.handleErrorResponse(MODULE_NAME, getTrailerById.name, error, res);
+    }
+  
 }
 
 
@@ -218,7 +222,7 @@ function updateOperador(req, res) {
 
 module.exports = {
   getTrailers,
-  getTruckById,
+  getTrailerById,
   updateOperador,
   deleteOperador,
   GS_CT_ERR_GAMESYSTEM_NOT_FOUND,
