# api/swagger/swagger.yaml
@@ -3,8 +3,8 @@ info:
   version: "0.0.1"
   title: Game Collector App
 # during dev, should point to your local machine
-#host: localhost:10010
-host: eco-seeker-213615.appspot.com
+host: localhost:10010
+#host: eco-seeker-213615.appspot.com
 # basePath prefixes all resource paths 
 basePath: /
 # 
@@ -63,10 +63,10 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
   /operadores/{id}:
-    x-swagger-router-controller: operadores.controller
+    x-swagger-router-controller: drivers.controller
     get:
       description: get a operador
-      operationId: getOperadorById
+      operationId: getDriverById
       parameters:
         - name: id
           type: string
@@ -328,6 +328,36 @@ paths:
             $ref: "#/definitions/GetTruckListResponse"
         404:
           description: "Trucks not found"
+
+  '/trucks/{id}':
+    x-swagger-router-controller: trucks.controller
+
+    get:
+      tags:
+        - trucks
+      summary: Find truck by ID
+      description: Returns a single trucks
+      operationId: getTruckById
+      produces:
+        - application/json
+      parameters:
+        - name: id
+          in: path
+          description: ID of truck to return
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/Truck'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: truck not found
+
+
  
   /trailers:
     x-swagger-router-controller: trailers.controller
@@ -347,6 +377,36 @@ paths:
         404:
           description: "Trailers not found"
 
+  '/trailers/{id}':
+    x-swagger-router-controller: trailers.controller
+
+    get:
+      tags:
+        - trailers
+      summary: Find dolly by ID
+      description: Returns a single trailer
+      operationId: getTrailerById
+      produces:
+        - application/json
+      parameters:
+        - name: id
+          in: path
+          description: ID of trailer to return
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/Trailer'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: trailer not found
+
+
+
   /dollys:
     x-swagger-router-controller: dollys.controller
 
@@ -364,6 +424,7 @@ paths:
             $ref: "#/definitions/GetDollyListResponse"
         404:
           description: "Dollys not found"
+
 
   '/dollys/{id}':
     x-swagger-router-controller: dollys.controller
@@ -410,6 +471,34 @@ paths:
             $ref: "#/definitions/GetRouteListResponse"
         404:
           description: "Routes not found"
+
+  '/rutas/{id}':
+    x-swagger-router-controller: routes.controller
+
+    get:
+      tags:
+        - rutas
+      summary: Find dolly by ID
+      description: Returns a single route
+      operationId: getRouteById
+      produces:
+        - application/json
+      parameters:
+        - name: id
+          in: path
+          description: ID of route to return
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/Route'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Route not found
 
 
   /swagger:
